--- a/div.html
+++ b/div.html
@@ -95,7 +95,7 @@
 <body class="bg-gray-900 text-white">
 
 <div id="loading-screen">
-  Downloading Assets ! 
+  Downloading Images ! 
 
 </div>
 <div id="main-menu" style="display: none;">
